# attest

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
dashboard/: package-lock.json
dashboard/src/: App.tsx  index.css
docs/: behavioral-conformance.md
load/: enforce.js  results.json  results.txt
migrations/: env.py
migrations/versions/: 698141e0a22e_initial_schema.py
policies/: pii_redaction.yaml
scripts/: gen_keys.py
src/attest/: chain.py  config.py  db.py  dsl.py  hashing.py  llm.py  loader.py  logging_setup.py  main.py  matcher.py  metrics.py  models.py
src/attest/routes/: audit.py  enforce.py  policies.py
tests/: test_chain.py  test_matcher.py
