[project]
name = "attest"
version = "0.0.1"
description = "policy enforcement gateway for LLM outputs"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "pyyaml",
    "cryptography",
    "groq",
    "structlog",
    "prometheus-client",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]